--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="home">
     <h1> Java Script </h1>
-    <h5> RODOLFO GONZALEZ - Primera Entrega de Proyecto Final </h5>
+    <h5> RODOLFO GONZALEZ - Primera Pre-Entrega de Proyecto Final </h5>
     <div>
         <img src="images/goku.jpg" width=100% alt="goku">
     </div>
