--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
                 <div class="collapse navbar-collapse menu-end " id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html"> Inicio </a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#juegos"> Juegos </a>
                         </li>
                         <li class="nav-item">
@@ -94,7 +91,7 @@
         </div>
     </section>
     <!--------------------- separador ------------------------->    
-    <div class="conectivity">
+    <div class="consolas sections">
         <i class="bi bi-xbox"></i>
         <i class="bi bi-playstation"></i>
         <i class="bi bi-nintendo-switch"></i>
