se agrego boton pagar en carrito, se habilita cuando hay productos en el carrito

--- a/index.html
+++ b/index.html
@@ -97,12 +97,14 @@
         <i class="bi bi-nintendo-switch"></i>
     </div>
     <!------------------- Carrito -------------------------------->
-    <section id="carrito" class="container">
+    <section id="carrito" class="container sections" style="padding-left: 80px">
+        <h1 class="title-section"> Carrito </h1>
         <div>
             <p>Los elementos seleccionados para su compra son:</p>
             <ul id="listaCarrito">
             </ul>
         </div>
+        <button id="pagar" type="button" class="btn btn-sm btn-primary">Comprar</button>
     </section>
     <!------------------- Scripts -------------------------------->
     <script src="./js/main.js"></script>
