--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="shortcut icon" href="./images/controller.svg">
+    <link rel="shortcut icon" href="./public/images/controller.svg">
     <!-- animate css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Hoja de estilos css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <!----------------------   inicio del body --------------------------------------------->
 
@@ -44,7 +44,7 @@
 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./app/components/contact/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -126,9 +126,9 @@
     </div>
 
     <!------------------- Scripts -------------------------------->
-    <script src="./js/productos.js"></script>
-    <script src="./js/carrito.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="app/data/productos.js" type="module"></script>
+    <script src="app/components/cart/carrito.js" type="module"></script>
+    <script src="app/main.js" type="module"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
