--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
             <p id="descuento" class="ocultar">Descuento: </p>
             <p class="flex-row flex-r-end">Total: $<b id="total"></b></p>
             <div class="col-12 mx-auto btn-pagar">
-                <button id="btnAgregarCarrito${producto.id}" type="button"
-                    class="btn btn-outline-primary">Pagar</button>
+                <button id="btnPagar" type="button"class="btn btn-outline-primary">Pagar</button>
             </div>
         </div>
     </div>
@@ -133,6 +132,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!------------------------ Pie de Pagina ----------------------->
     <footer class="footer">
