--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="./public/images/controller.svg">
+    <!-- toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- animate css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Hoja de estilos css -->
@@ -88,7 +90,7 @@
     <p class="home"> Recuerde que comprando más de 2 unidades tiene un 10% de descuento y con mas de 5 obtienes un 20%
         de descuento</p>
 
-    <!--------------------- separador ------------------------->
+    <!--------------------- separador ---------------------------->
     <div class="consolas sections">
         <i class="bi bi-xbox"></i>
         <i class="bi bi-playstation"></i>
@@ -124,17 +126,20 @@
         </div>
     </div>
 
-    <!------------------- Scripts -------------------------------->
+    <!------------------- Scripts JavaScript -------------------------------->
     <script src="app/data/productos.js" type="module"></script>
     <script src="app/components/cart/carrito.js" type="module"></script>
     <script src="app/main.js" type="module"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    </script>                                                                                   <!--- Bootstrap -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>     <!--- toastify --->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>                 <!-- sweetalert -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.mint"></script> <!----- ajax ----->
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>  <!---- fechas ---->
 
-    <!------------------------ Pie de Pagina ----------------------->
+    <!---------------------------- Pie de Pagina ---------------------------->
     <footer class="footer">
         <div class="footer__row">
             <form class="footer__form">
@@ -153,7 +158,7 @@
             <p> Rodolfo Gonzalez © 2022. Todos los derechos Reservados. </p>
         </div>
     </footer>
-    <!---------------------------------------------------------------->
+    <!------------------------------------------------------------------------>
 </body>
 
 </html>
