--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <!------------------- Scripts JavaScript -------------------------------->
     <script src="app/data/productos.js" type="module"></script>
     <script src="app/components/cart/carrito.js" type="module"></script>
-    <script src="app/main.js" type="module"></script>
+    <script src="app/index.js" type="module"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
