--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 
     <!------------------- Scripts JavaScript -------------------------------->
     <script src="app/data/productos.js" type="module"></script>
+    <script src="app/components/filters/filtros.js" type="module"></script>
     <script src="app/components/cart/carrito.js" type="module"></script>
+    <script src="app/components/modal/modal.js" type="module"></script>
     <script src="app/index.js" type="module"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -136,7 +138,7 @@
     </script>                                                                                   <!--- Bootstrap -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>     <!--- toastify --->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>                 <!-- sweetalert -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.mint"></script> <!----- ajax ----->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.mint"></script> --- ajax --- -->
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>  <!---- fechas ---->
 
     <!---------------------------- Pie de Pagina ---------------------------->
