ajustes en el contador del carrito al eliminar o agregar elementos

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <p id="descuento" class="ocultar">Descuento: </p>
             <p class="flex-row flex-r-end">Total: $<b id="total"></b></p>
             <div class="col-12 mx-auto btn-pagar">
-                <button id="btnPagar" type="button"class="btn btn-outline-primary">Pagar</button>
+                <button id="btnPagar" type="button"class="btn btn-outline-primary" disabled>Pagar</button>
             </div>
         </div>
     </div>
