Obteniendo datos de un .json a traves de un fetch, simulando una peticion a una api

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="mb-3 col-sm-12 col-lg-4">
                 <label class="form-label">Buscar Juegos por Categoria:</label>
                 <select id="categoria" class="form-select">
-                    <option selected>Seleccione una categoria</option>
+                    <option value="todos" selected>Seleccione una categoria</option>
                     <option value="deportes">Deportes</option>
                     <option value="accion">Acción</option>
                     <option value="conduccion">Conducción</option>
@@ -127,7 +127,8 @@
     </div>
 
     <!------------------- Scripts JavaScript -------------------------------->
-    <script src="app/data/productos.js" type="module"></script>
+    <script src="app/data/fetch.js" type="module"></script>
+    <!-- <script src="app/data/productos.js" type="module"></script> -->
     <script src="app/components/filters/filtros.js" type="module"></script>
     <script src="app/components/cart/carrito.js" type="module"></script>
     <script src="app/components/modal/modal.js" type="module"></script>
