--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link position-relative" id="btnAbrirCarrito"> Carrito
-                                <span id="contadorCarrito"
-                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"></span>
+                                <span class="contadorCarrito position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"></span>
                             </a>
 
                         </li>
@@ -125,8 +124,14 @@
             </div>
         </div>
     </div>
-
+    <!------- boton para ir al inicio desde cualquier parte de la página ------------->
+    <button id="button-to-top">
+        <i class="bi bi-cart-check">
+            <span class="contadorCarrito position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"></span>
+        </i> 
+    </button>
     <!------------------- Scripts JavaScript -------------------------------->
+    <script src="app/components/buttonTop/btnToTop.js" type="module"></script>
     <script src="app/data/productos.js" type="module"></script>
     <script src="app/components/filters/filtros.js" type="module"></script>
     <script src="app/components/cart/carrito.js" type="module"></script>
@@ -138,7 +143,6 @@
     </script>                                                                                   <!--- Bootstrap -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>     <!--- toastify --->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>                 <!-- sweetalert -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.mint"></script> --- ajax ---->
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>  <!---- fechas ---->
 
     <!---------------------------- Pie de Pagina ---------------------------->
