--- a/index.html
+++ b/index.html
@@ -125,17 +125,18 @@
         </div>
     </div>
     <!------- boton para ir al inicio desde cualquier parte de la página ------------->
-    <button id="button-to-top">
+    <button id="btnTop">
         <i class="bi bi-cart-check">
             <span class="contadorCarrito position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"></span>
         </i> 
     </button>
     <!------------------- Scripts JavaScript -------------------------------->
-    <script src="app/components/buttonTop/btnToTop.js" type="module"></script>
-    <script src="app/data/productos.js" type="module"></script>
+    <script src="app/components/buttonTop/btnTop.js" type="module"></script>
+    <script src="app/data/obtenerProductos.js" type="module"></script>
     <script src="app/components/filters/filtros.js" type="module"></script>
     <script src="app/components/cart/carrito.js" type="module"></script>
     <script src="app/components/modal/modal.js" type="module"></script>
+    <script src="app/components/suscription/suscription.js" type="module"></script>
     <script src="app/index.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
@@ -147,10 +148,10 @@
     <!---------------------------- Pie de Pagina ---------------------------->
     <footer class="footer">
         <div class="footer__row">
-            <form class="footer__form">
+            <form id="suscription" class="footer__form">
                 <p class="label-submit"> Para recibir promociones e información:</p>
                 <input type="email" class="form-control" id="email" placeholder="Email">
-                <button type="submit" class="btn btn-outline-light btn-sm">Suscribirse</button>
+                <button id="btnSuscribirse" type="submit" class="btn btn-outline-light btn-sm">Suscribirse</button>
             </form>
             <div class="footer__social">
                 <!-- imagenes de redes sociales en pie de pagina-->
