--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
         </nav>
     </header>
     <!--------------------- Cuerpo de Inicio --------------------------------------------->
-      <div id="carouselCrossfade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div id="carouselCrossfade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/public/images/carrousell-horizon.jpg" class="d-block w-100" alt="Slide 1">
-          </div>
-          <div class="carousel-item">
-            <img src="/public/images/carousel-ps5-games.jpg" class="d-block w-100" alt="Slide 2">
-          </div>
-          <div class="carousel-item">
-            <img src="/public/images/carousel-ghost.jpg" class="d-block w-100" alt="Slide 3">
-          </div>
+            <div class="carousel-item active">
+                <img src="./public/images/carrousell-horizon.jpg" class="d-block w-100" alt="Slide 1">
+            </div>
+            <div class="carousel-item">
+                <img src="./public/images/carousel-ps5-games.jpg" class="d-block w-100" alt="Slide 2">
+            </div>
+            <div class="carousel-item">
+                <img src="./public/images/carousel-ghost.jpg" class="d-block w-100" alt="Slide 3">
+            </div>
         </div>
         <a class="carousel-control-prev" href="#carouselCrossfade" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselCrossfade" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
         </a>
-      </div>
+    </div>
     <!--------------------- Cuerpo de Inicio --------------------------------------------->
 
     <div class="container mt-5">
